--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -136,6 +136,11 @@
             <artifactId>commons-math3</artifactId>
             <version>3.6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.matlab</groupId>
+            <artifactId>matlab-javabuilder-ws</artifactId>
+            <version>0.0.1</version>
+        </dependency>
     </dependencies>
 
     <build>
