--- a/aaas-api-user-login/src/main/resources/application-prod.yml
+++ b/aaas-api-user-login/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 ---
 server:
-  port: 8080
+  port: 10020
   contextPath: /
 ---
 spring:
@@ -20,7 +20,7 @@ datasource:
       dialect: org.hibernate.dialect.H2Dialect
 ---
 spring:
-  profiles: prod
+  profiles: test
 datasource:
   sampleapp:
     url: jdbc:mysql://localhost:3306/ssflogin?useUnicode=true&characterEncoding=utf-8
@@ -34,4 +34,3 @@ datasource:
       show_sql: true
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
-
