--- a/aaas-api-data-manager/src/main/resources/application-dev.yml
+++ b/aaas-api-data-manager/src/main/resources/application-dev.yml
@@ -1,6 +1,6 @@
 ---
 server:
-  port: 8080
+  port: 10030
   contextPath: /
 ---
 spring:
@@ -40,4 +40,9 @@ datasource:
       show_sql: true
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
-
+daily:
+  fromdate: 2016-01-01
+  todate: now
+grpc:
+  host: localhost
+  port: 10031
