--- a/aaas-api-risk-assessment/src/main/resources/application-prod.yml
+++ b/aaas-api-risk-assessment/src/main/resources/application-prod.yml
@@ -19,8 +19,10 @@ spring:
             database: test
 
 server:
-    port: 10023
-    
+    port: 10050
+grpc:
+  host: localhost
+  port: 10051
     
 application:
     swagger:
