--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -31,7 +31,7 @@ spring:
   data:
     mongodb:
       database: test1
-      host: localhost
+      host: 192.168.1.10
       port: 27017
   rabbitmq:
     username: ssf
@@ -46,7 +46,7 @@ spring:
     topicOrder: shellshellfish.order
 datasource:
   sampleapp:
-    url: jdbc:mysql://localhost:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.10:3306/ssfuser?useUnicode=true&connectionCollation=utf8_general_ci&characterSet=utf8&characterEncoding=utf-8
     username: sa
     password: 1qaz@WSX
     driverClassName: com.mysql.jdbc.Driver
