--- a/aaas-api-user-login/pom.xml
+++ b/aaas-api-user-login/pom.xml
@@ -157,6 +157,10 @@
 			<artifactId>lombok</artifactId>
 			<version>${lombok.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
