--- a/aaas-app-datacollection-client/pom.xml
+++ b/aaas-app-datacollection-client/pom.xml
@@ -78,6 +78,15 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>RELEASE</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<!-- add security for swigger static -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
