--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -73,6 +73,10 @@
             <artifactId>fastjson</artifactId>
             <version>RELEASE</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
     </dependencies>
 	
