update for zuul gateway

--- a/aaas-api-gateway/src/main/resources/application-prod.yml
+++ b/aaas-api-gateway/src/main/resources/application-prod.yml
@@ -53,5 +53,6 @@ shellshellfish:
     - /api/riskassessments/**
     - /v1/auth/oauth/token
     - /v1/api/bankaccounts/**
+    - /phoneapi-ssf/**
     - /heartbeat/
   
