--- a/aaas-finance-trade/aaas-finance-trade-order/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-order/pom.xml
@@ -138,6 +138,15 @@
 			<version>2.6.1</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<!-- add security for swigger static -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
