--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -8,6 +8,11 @@ logging:
     org.springframework.data: debug
     org.springframework.data.mongodb.core.MongoTemplate: DEBUG
 spring:
+  data:
+    mongodb:
+      database: test1
+      host: 192.168.1.10
+      port: 27017
   rabbitmq:
     username: ssf
     password: shellshellfish
