--- a/aaas-finance-trade/aaas-finance-trade-order/pom.xml
+++ b/aaas-finance-trade/aaas-finance-trade-order/pom.xml
@@ -143,10 +143,10 @@
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<!-- add security for swigger static -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>org.springframework.boot</groupId>-->
+			<!--<artifactId>spring-boot-starter-security</artifactId>-->
+		<!--</dependency>-->
 	</dependencies>
 
 	<build>
