--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -19,11 +19,11 @@ spring:
     host: 192.168.1.22
     port: 5672
     virtual-host: aaas
-    topicQueuePayName: com.ssf.topic.queue.pay
-    topicQueueOrderName: com.ssf.topic.queue.order
-    topicQueueTrdLogName: com.ssf.topic.queue.trdlog
-    topicQueueBankcardName: com.ssf.topic.queue.bankcard
-    topicExchangeName: com.ssf.topic.exchange
+    topicQueuePayName: com-ssf-topic-name-pay
+    topicQueueOrderName: com-ssf-topic-name-order
+    topicQueueTrdLogName: com-ssf-topic-name-trdlog
+    topicQueueBankcardName: com-ssf-topic-name-bankcard
+    topicExchangeName: com-ssf-topic-exchange
     topicPay: shellshellfish.pay
     topicOrder: shellshellfish.order
   data:
