update application-test.yml  rabbitmq.host to 192.168.1.10

--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -36,7 +36,7 @@ spring:
   rabbitmq:
     username: ssf
     password: shellshellfish
-    host: localhost
+    host: 192.168.1.10
     port: 5672
     virtual-host: aaas
     topicQueuePayName: com.ssf.topic.queue.pay
