--- a/aaas-mid-api/src/main/resources/application.yml
+++ b/aaas-mid-api/src/main/resources/application.yml
@@ -15,6 +15,7 @@ shellshellfish:
   risk-assessment-url: "http://localhost:10050"
   user-user-info: "http://localhost:10060"
   finance-url: "http://localhost:10120"
+  asset-alloction-url: "http://localhost:10020"
 
 security:
   basic:
