--- a/aaas-api-asset-allocation/src/main/resources/application-prod.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-prod.yml
@@ -39,6 +39,16 @@ spring:
             port: 27017
             database: test
 
+        mybatis:
+            config-locations: classpath:mybatis/mybatis-config.xml
+            mapper-locations: classpath:mybatis/mapper/*.xml
+        spring:
+            datasource:
+                driverClassName: com.mysql.jdbc.Driver
+                password: 1qaz@WSX
+                url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8
+                username: sa
+
 server:
     port: 10020
     
