--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -35,14 +35,15 @@ spring:
  #           hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     data:
         mybatis:
-            config-locations: classpath:mybatis/mybatis-config.xml
-            mapper-locations: classpath:mybatis/mapper/*.xml
-        spring:
-            datasource:
-                driverClassName: com.mysql.jdbc.Driver
-                password: 1qaz@WSX
-                url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
-                username: sa
+#            config-locations: classpath:mybatis/mybatis-config.xml            
+#            mapper-locations: classpath:mybatis/mapper/*.xml
+            configLocation: classpath:mybatis/mybatis-config.xml            
+            mapperLocations: classpath:mybatis/mapper/*.xml
+    datasource:
+        driverClassName: com.mysql.jdbc.Driver
+        password: 1qaz@WSX
+        url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
+        username: sa
 
 server:
     port: 10020
