--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -6,7 +6,7 @@ spring:
             enabled: false 
             
             application:
-        name: ssf-finance
+        name: ssf-asset-allocation
 
     jackson:
       serialization:
