--- a/aaas-api-asset-allocation/src/main/resources/application-prod.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-prod.yml
@@ -6,7 +6,7 @@ spring:
             enabled: false 
             
             application:
-        name: ssf-finance
+        name: ssf-asset-allocation
 
     jackson:
       serialization:
@@ -35,14 +35,13 @@ spring:
  #           hibernate.cache.region.factory_class: org.hibernate.cache.ehcache.SingletonEhCacheRegionFactory
     data:
         mybatis:
-            config-locations: classpath:mybatis/mybatis-config.xml
-            mapper-locations: classpath:mybatis/mapper/*.xml
-        spring:
-            datasource:
-                driverClassName: com.mysql.jdbc.Driver
-                password: 1qaz@WSX
-                url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8
-                username: sa
+            configLocation: classpath:mybatis/mybatis-config.xml
+            mapperLocations: classpath:mybatis/mapper/*.xml
+    datasource:
+        driverClassName: com.mysql.jdbc.Driver
+        password: 1qaz@WSX
+        url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8
+        username: sa
 
 server:
     port: 10020
