--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -1,3 +1,5 @@
+server:
+  port: 10020
 mybatis:
     config-locations: classpath:mybatis/mybatis-config.xml
     mapper-locations: classpath:mybatis/mapper/*.xml
@@ -7,3 +9,6 @@ spring:
         password: 1qaz@WSX
         url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
         username: sa
+grpc:
+  host: localhost
+  port: 10021
