--- a/aaas-api-asset-allocation/src/main/resources/application-prod.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-prod.yml
@@ -1,3 +1,6 @@
+server:
+  port: 10020
+
 mybatis:
     config-locations: classpath:mybatis/mybatis-config.xml
     mapper-locations: classpath:mybatis/mapper/*.xml
@@ -7,3 +10,6 @@ spring:
         password: 1qaz@WSX
         url: jdbc:mysql://localhost:3306/choice?useUnicode=true&characterEncoding=utf-8
         username: sa
+grpc:
+  host: localhost
+  port: 10021
