--- a/aaas-api-gateway/src/main/resources/application-prod.yml
+++ b/aaas-api-gateway/src/main/resources/application-prod.yml
@@ -3,6 +3,9 @@ zuul:
     api-mid:
       path: /phoneapi-ssf/**
       url: http://localhost:10130/phoneapi-ssf
+    apii-mid:
+      path: /phoneapii-ssf/**
+      url: http://localhost:10140/phoneapii-ssf
     userinfo:
       path: /api/f/SHT/temp-11-15/aaas/aaas-api-gateway/userinfo/**
       url: http://localhost:10060/api/userinfo/
@@ -42,10 +45,10 @@ grpc:
   host: localhost
   port: 10041
 security:
-  oauth2: 
+  oauth2:
     resource:
       userInfoUri: http://localhost:10070/auth/user
-      
+
 shellshellfish:
   ignoredWhitelist:
     - /api/userinfo/**
@@ -54,5 +57,6 @@ shellshellfish:
     - /v1/auth/oauth/token
     - /v1/api/bankaccounts/**
     - /phoneapi-ssf/**
+    - /phoneapii-ssf/**
     - /heartbeat/
   
