--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <module>aaas-api-risk-assessment</module>
         <module>aaas-api-gateway</module>
         <module>aaas-mid-api</module>
+        <module>aaas-mid-apii</module>
     </modules>
 
 </project>
