--- a/aaas-api-data-manager/src/main/resources/application-prod.yml
+++ b/aaas-api-data-manager/src/main/resources/application-prod.yml
@@ -4,7 +4,7 @@ server:
   contextPath: /
 ---
 spring:
-  profiles: local, default
+  profiles: prod
 datasource:
   sampleapp:
     url: jdbc:h2:~/test
