--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -24,7 +24,7 @@
 		<log4j.version>1.2.17</log4j.version>
 		<slf4j.version>1.7.13</slf4j.version>
 		<logback.version>1.1.3</logback.version>
-		<junit.version>4.12</junit.version>
+
 		<mockito.version>1.9.5</mockito.version>
 		<assertj.version>3.3.0</assertj.version>
 		<maven-surefire-plugin.version>2.11</maven-surefire-plugin.version>
@@ -170,16 +170,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 
 				<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<!--<scope>test</scope>-->
 
 		</dependency>
 
@@ -190,23 +184,14 @@
 		</dependency>
 		<!-- junit surefire test-->
 		<!-- https://mvnrepository.com/artifact/junit/junit -->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+
 
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-test</artifactId>
-			<version>RELEASE</version>
-		</dependency>
+
 
 	</dependencies>
 	<build>
