--- a/aaas-api-user-login/src/main/resources/application-dev.yml
+++ b/aaas-api-user-login/src/main/resources/application-dev.yml
@@ -47,5 +47,5 @@ redis:
     port: 6379
     pwd: redis123
 sms:
-    signcode: SMS_110225054
-    signname: \u8D22\u5BCCE\u667A\u6295
+    signcode: SMS_117526841
+    signname: 财富E智投
