--- a/aaas-api-data-manager/src/main/resources/application-test.yml
+++ b/aaas-api-data-manager/src/main/resources/application-test.yml
@@ -4,16 +4,32 @@ server:
   contextPath: /
 ---
 spring:
-  profiles: test
+  profiles: local, default
+datasource:
+  sampleapp:
+    url: jdbc:h2:~/test
+    username: SA
+    password:
+    driverClassName: org.h2.Driver
+    defaultSchema:
+    maxPoolSize: 10
+    hibernate:
+      hbm2ddl.method: create-drop
+      show_sql: true
+      format_sql: true
+      dialect: org.hibernate.dialect.H2Dialect
+  
+---
+spring:
+  profiles: local, default
   data:
       mongodb:
         database: funds
-        host: localhost
+        host: 192.168.1.10
         port: 27017
-
 datasource:
   sampleapp:
-    url: jdbc:mysql://localhost:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.10:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
     username: sa
     password: abcd1234
     driverClassName: com.mysql.jdbc.Driver
