bankcard check and finance check

--- a/aaas-api-finance/pom.xml
+++ b/aaas-api-finance/pom.xml
@@ -77,7 +77,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>com.shellshellfish</groupId>
+			<artifactId>aaas-api-common</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
     </dependencies>
 	
 	<build>
