--- a/aaas-api-data-manager/src/main/resources/application-test.yml
+++ b/aaas-api-data-manager/src/main/resources/application-test.yml
@@ -13,7 +13,7 @@ spring:
 
 datasource:
   sampleapp:
-    url: jdbc:mysql://localhost:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
+    url: jdbc:mysql://192.168.1.10:3306/ssftrdorder?useUnicode=true&characterEncoding=utf-8
     username: sa
     password: abcd1234
     driverClassName: com.mysql.jdbc.Driver
