--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -44,6 +44,9 @@ grpc:
   finance_prod_client:
     host: localhost
     port: 10021
+  pay_client:
+    host: localhost
+    port: 10021
   order_server:
     host: localhost
     port: 10051
