--- a/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-order/src/main/resources/application-dev.yml
@@ -19,6 +19,12 @@ spring:
     topicPay: shellshellfish.pay
     topicOrder: shellshellfish.order
 
+  data:
+    mongodb:
+      host: 192.168.1.10
+      port: 27017
+      database: zhongzheng
+
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssftrdorder?useUnicode=true&connectionCollation=utf8_general_ci&characterSetResults=utf8&characterEncoding=utf-8
