add data-manager project

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <module>aaas-api-gateway</module>
         <module>aaas-mid-api</module>
         <module>aaas-mid-apii</module>
+		<module>aaas-api-data-manager</module>
     </modules>
 
 </project>
