--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -222,6 +222,10 @@
 									<directory>../proto/userinfo/</directory>
 									<filtering>true</filtering>
 								</resource>
+								<resource>
+									<directory>../proto/finance/</directory>
+									<filtering>true</filtering>
+								</resource>
 							</resources>
 						</configuration>
 					</execution>
