port for trade order revised as READ_ME;purchase amount detail mid-api added

--- a/aaas-mid-api/src/main/resources/application-test.yml
+++ b/aaas-mid-api/src/main/resources/application-test.yml
@@ -16,7 +16,7 @@ shellshellfish:
   userinfo-url: "http://localhost:10060"
   finance-url: "http://localhost:10120"
   asset-alloction-url: "http://localhost:10020"
-
+  trade-order-url: "http://localhost:10100"
 
 security:
   basic:
