--- a/aaas-funds-datacollection-server/pom.xml
+++ b/aaas-funds-datacollection-server/pom.xml
@@ -13,7 +13,7 @@
 		<groupId>com.shellshellfish</groupId>
 		<artifactId>aaas</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		 <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
