--- a/aaas-mid-api/src/main/resources/application.yml
+++ b/aaas-mid-api/src/main/resources/application.yml
@@ -16,6 +16,8 @@ shellshellfish:
   user-user-info: "http://localhost:10060"
   finance-url: "http://localhost:10120"
   asset-alloction-url: "http://localhost:10100"
+  trade-order-url: "http://localhost:10100"
+  api-data-manager-url: "http://localhost:10030"
   
 
 security:
