fix bug of compile

--- a/aaas-api-asset-allocation/pom.xml
+++ b/aaas-api-asset-allocation/pom.xml
@@ -194,15 +194,9 @@
         </dependency>
         <dependency>
             <groupId>com.matlab</groupId>
-            <artifactId>matlab-javabuilder-linux</artifactId>
+            <artifactId>matlab-javabuilder</artifactId>
             <version>0.0.1</version>
-            <!--<classifier>${os.detected.classifier}</classifier>-->
-        </dependency>
-        <dependency>
-            <groupId>com.matlab</groupId>
-            <artifactId>matlab-javabuilder-ws</artifactId>
-            <version>0.0.1</version>
-            <!--<classifier>${os.detected.classifier}</classifier>-->
+            <classifier>${os.detected.classifier}</classifier>
         </dependency>
     </dependencies>
 
