--- a/aaas-api-data-manager/pom.xml
+++ b/aaas-api-data-manager/pom.xml
@@ -12,10 +12,10 @@
 	<description>aaas-api-data_manager</description>
 
 	<parent>
-		<groupId>com.shellshellfish</groupId>
-		<artifactId>aaas</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		 <!-- lookup parent from repository -->
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.5.7.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
