--- a/aaas-mid-api/pom.xml
+++ b/aaas-mid-api/pom.xml
@@ -153,8 +153,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-test</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.shellshellfish</groupId>
+            <artifactId>aaas-api-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 	<build>
 		<plugins>
 			<plugin>
