--- a/aaas-api-user-info/src/main/resources/application-test.yml
+++ b/aaas-api-user-info/src/main/resources/application-test.yml
@@ -67,4 +67,13 @@ datasource:
 grpc:
   userinfo:
     host: localhost
-    port: 10041
+    port: 10061
+  data-manager-rpc:
+    host: localhost
+    port: 10031
+  finance-trade-order-rpc:
+    host: localhost
+    port: 10101
+
+
+aaas-api-finance-url: http://localhost:10120
