--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-prod.yml
@@ -9,6 +9,9 @@ logging:
     org.springframework.data.mongodb.core.MongoTemplate: DEBUG
 spring:
   rabbitmq:
+    listener:
+      simple:
+        acknowledge-mode: auto
     username: ssf
     password: shellshellfish
     host: localhost
