--- a/aaas-api-data-manager/src/main/resources/application-dev.yml
+++ b/aaas-api-data-manager/src/main/resources/application-dev.yml
@@ -2,26 +2,7 @@
 server:
   port: 10030
   contextPath: /
----
 spring:
-  profiles: local, default
-datasource:
-  sampleapp:
-    url: jdbc:h2:~/test
-    username: SA
-    password:
-    driverClassName: org.h2.Driver
-    defaultSchema:
-    maxPoolSize: 10
-    hibernate:
-      hbm2ddl.method: create-drop
-      show_sql: true
-      format_sql: true
-      dialect: org.hibernate.dialect.H2Dialect
-  
----
-spring:
-  profiles: prod
   data:
       mongodb:
         database: funds
@@ -41,3 +22,6 @@ datasource:
       format_sql: true
       dialect: org.hibernate.dialect.MySQLDialect
 
+grpc:
+  host: localhost
+  port: 10031
