--- a/aaas-api-user-info/src/main/resources/application-dev.yml
+++ b/aaas-api-user-info/src/main/resources/application-dev.yml
@@ -37,6 +37,9 @@ spring:
       port: 27017
 
   rabbitmq:
+    listener:
+      simple:
+        acknowledge-mode: auto
       username: ssf
       password: shellshellfish
       host: 192.168.1.22
