--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-dev.yml
@@ -14,6 +14,9 @@ spring:
 #      host: 192.168.1.10
 #      port: 27017
   rabbitmq:
+    listener:
+      simple:
+        acknowledge-mode: auto
     username: ssf
     password: shellshellfish
     host: 192.168.1.22
@@ -57,6 +60,7 @@ grpc:
   finance_prod_client:
     host: localhost
     port: 10030
+
 using:
   spring:
     schedulerFactory: true
