--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
@@ -14,6 +14,9 @@ spring:
 #      host: 192.168.1.10
 #      port: 27017
   rabbitmq:
+    listener:
+      simple:
+        acknowledge-mode: auto
     username: ssf
     password: shellshellfish
     host: 192.168.1.22
