zhenghe mid apii

--- a/aaas-mid-api/src/main/resources/application-test.yml
+++ b/aaas-mid-api/src/main/resources/application-test.yml
@@ -18,7 +18,7 @@ shellshellfish:
   asset-alloction-url: "http://localhost:10020"
   trade-order-url: "http://localhost:10100"
   trade-pay-url: "http://localhost:10110"
-  api-data-manager-url: "http://localhost:10030"
+  data-manager-url: "http://localhost:10030"
   
 
 
