--- a/aaas-mid-api/src/main/resources/application.yml
+++ b/aaas-mid-api/src/main/resources/application.yml
@@ -18,6 +18,6 @@ shellshellfish:
   asset-alloction-url: "http://localhost:10100"
   trade-order-url: "http://localhost:10100"
   trade-pay-url: "http://localhost:10110"
-  api-data-manager-url: "http://localhost:10030"
+  data-manager-url: "http://localhost:10030"
   
 
