make trdorder run

--- a/aaas-api-user-info/pom.xml
+++ b/aaas-api-user-info/pom.xml
@@ -233,6 +233,10 @@
 									<directory>../proto/trade/</directory>
 									<filtering>true</filtering>
 								</resource>
+								<resource>
+									<directory>../proto/order/</directory>
+									<filtering>true</filtering>
+								</resource>
 							</resources>
 						</configuration>
 					</execution>
