--- a/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
+++ b/aaas-finance-trade/aaas-finance-trade-pay/src/main/resources/application-test.yml
@@ -33,7 +33,7 @@ spring:
     mongodb:
       host: 192.168.1.10
       port: 27017
-      database: trade
+      database: zhongzheng
 
 
 datasource:
