--- a/aaas-api-risk-assessment/src/main/resources/application-prod.yml
+++ b/aaas-api-risk-assessment/src/main/resources/application-prod.yml
@@ -11,7 +11,9 @@ spring:
     jackson:
       serialization:
         fail-on-empty-beans: false
-
+    jpa:
+      hibernate:
+        ddl-auto: update
     data:
         mongodb:
             host: localhost
