--- a/aaas-api-user-info/src/main/resources/application-prod.yml
+++ b/aaas-api-user-info/src/main/resources/application-prod.yml
@@ -9,6 +9,9 @@ logging:
     org.springframework.data: debug
 
 spring:
+  jpa:
+    hibernate:
+      ddl-auto: update
   data:
     mongodb:
       database: test1
