--- a/aaas-api-asset-allocation/src/main/resources/application-dev.yml
+++ b/aaas-api-asset-allocation/src/main/resources/application-dev.yml
@@ -9,6 +9,9 @@ spring:
         password: 1qaz@WSX
         url: jdbc:mysql://192.168.1.10:3306/choice?useUnicode=true&characterEncoding=utf-8
         username: sa
+    jpa:
+      hibernate:
+        ddl-auto: update
 grpc:
   host: localhost
   port: 10021
