--- a/aaas-api-user-info/src/main/resources/application-dev.yml
+++ b/aaas-api-user-info/src/main/resources/application-dev.yml
@@ -16,7 +16,9 @@ spring:
       database: test1
       host: 192.168.1.10
       port: 27017
-
+  jpa:
+    hibernate:
+      ddl-auto: update
   rabbitmq:
      listener:
        simple:
