--- a/aaas-api-user-login/src/main/resources/application-dev.yml
+++ b/aaas-api-user-login/src/main/resources/application-dev.yml
@@ -2,25 +2,10 @@
 server:
   port: 10070
   contextPath: /
----
 spring:
-  profiles: local, default
-datasource:
-  sampleapp:
-    url: jdbc:h2:~/test
-    username: SA
-    password:
-    driverClassName: org.h2.Driver
-    defaultSchema:
-    maxPoolSize: 10
+  jpa:
     hibernate:
-      hbm2ddl.method: create-drop
-      show_sql: true
-      format_sql: true
-      dialect: org.hibernate.dialect.H2Dialect
----
-spring:
-
+      ddl-auto: update
 datasource:
   sampleapp:
     url: jdbc:mysql://192.168.1.10:3306/ssflogin?useUnicode=true&characterEncoding=utf-8
