--- a/aaas-api-user-info/src/main/resources/application-dev.yml
+++ b/aaas-api-user-info/src/main/resources/application-dev.yml
@@ -65,6 +65,9 @@ grpc:
   finance-trade-order-rpc:
     host: localhost
     port: 10101
+  finance-trade-pay-rpc:
+    host: localhost
+    port: 10111
 
 
 aaas-api-finance-url: http://localhost:10120
